Layout fixed: relative elements holder has lower z-index and doesn't overlap arrows

--- a/web-app/src/main/resources/com/preferanser/client/application/mvp/table.css
+++ b/web-app/src/main/resources/com/preferanser/client/application/mvp/table.css
@@ -50,7 +50,7 @@
 
 }
 
-.turnPointerHolder {
+.relativeElementsHolder {
     width: 100%;
     height: 100%;
     position: relative;
